# QMidi

./: CMakeLists.txt
src/OS/: QMidi_Win32.cpp
